app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    app.kubernetes.io/part-of: landing-zone-demo # Groups the application resources
