app/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: landing-zone-demo-frontend
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: landing-zone-demo-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: REPLACE_WITH_APIM_SUBNET_CIDR
        - ipBlock:
            cidr: REPLACE_WITH_AKS_SUBNET_CIDR
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: REPLACE_WITH_PRIVATE_ENDPOINT_SUBNET_CIDR
      ports:
        - protocol: TCP
          port: 443
